# public-universal-friend

./: .gitignore  Cargo.toml  Makefile  README.md  config.example.toml
src/: chat_state.rs  config.rs  llm.rs  main.rs  room_manager.rs  translation.rs  translation_service.rs  tui_app.rs
src/entities/: chat.rs
src/p2p/: chat_group.rs  message.rs  mod.rs  network.rs  service.rs  task.rs  types.rs
src/tui/: chat_state.rs  main_menu_state.rs  mod.rs
