[package]
name = "public-universal-friend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
kalosm = { version = "0.4.0", features = ["language", "metal", "llama"] }
p2panda-core = "0.3.1"
p2panda-net = "0.3.1"
p2panda-sync = "0.3.1"
ratatui = "0.29.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
